--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
+    "bootstrap": "^5.2.3",
+    "bulma": "^0.9.4",
     "firebase": "^9.17.1",
     "mongoose": "^6.9.1",
     "react": "^18.2.0",
