--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18
+FROM node:LTS
 
 # Create app directory
 WORKDIR /
@@ -8,12 +8,12 @@ WORKDIR /
 # where available (npm@5+)
 COPY package*.json ./
 
-RUN npm install
+RUN npm install 
 # If you are building your code for production
 # RUN npm ci --only=production
 
 # Bundle app source
 COPY . .
 
-EXPOSE 80
-CMD [ "npm", "start" ]
+EXPOSE 3000
+CMD [ "npm","start" ]
